RESOLVED FIXED 251702
Web Inspector: `inspectable` API doesn't have a correct Objective-C getter
https://bugs.webkit.org/show_bug.cgi?id=251702
Summary Web Inspector: `inspectable` API doesn't have a correct Objective-C getter
Patrick Angle
Reported 2023-02-03 10:48:14 PST
Attachments
Patrick Angle
Comment 1 2023-02-03 11:12:47 PST
EWS
Comment 2 2023-02-03 14:40:06 PST
Committed 259840@main (c0769577c02d): <https://commits.webkit.org/259840@main> Reviewed commits have been landed. Closing PR #9615 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.