Cherry-pick c0769577c02d. rdar://problem/105012093

Web Inspector: `inspectable` API doesn't have a correct Objective-C getter
    https://bugs.webkit.org/show_bug.cgi?id=251702
    rdar://105012093

    Reviewed by Tim Horton.

    Boolean getters should have an `is` prefix. Currently `inspectable` is not adhering to this rule. The current getter
    also doesn't match the approved API design. This API has not yet shipped, and there is no internal usage of
    `[webView inspectable]`, so this change will not break existing clients. `webView.inspectable` remains correct and
    unchanged.

    * Source/JavaScriptCore/API/JSContext.h:
    * Source/JavaScriptCore/API/JSContext.mm:
    (-[JSContext isInspectable]):
    (-[JSContext inspectable]): Deleted.
    * Source/WebKit/UIProcess/API/Cocoa/WKWebView.h:
    * Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:
    (-[WKWebView isInspectable]):
    (-[WKWebView inspectable]): Deleted.

    Canonical link: https://commits.webkit.org/259840@main

Canonical link: https://commits.webkit.org/259548.46@safari-7615.1.21.10-branch